# vile-snapshots

./: AUTHORS  CHANGES  CHANGES.R3  CHANGES.R4  CHANGES.R5  CHANGES.R6  CHANGES.R7  CHANGES.R8  COPYING  INSTALL  MANIFEST  README  README.CFG  README.MENU  README.PC  README.VMS  aclocal.m4  ansi.c  api.c  api.h  basic.c  bind.c  blist.c  blist.h  borland.c  btree.c  btree.h  buffer.c  buglist  builtflt.c  c-filt.c  charsets.c  chgdfunc.h  cmdtbl  config.emx  config_h.in  configure  configure.in  crypt.c  csrch.c  (+165 more)
doc/: Vileserv.doc  Vileserv.html  config.doc  config.html  dir.doc  dir.html  filters.doc  filters.html  hilite.doc  indent.pro  macros.doc  macros.html  make-hlp.pl  make-hlp.sh  make-toc.pl  make-toc.sh  makefile  menus.doc  menus.html  modes.doc  modes.html  oleauto.doc  oleauto.html  perl-api.doc  perl.doc  perl.html  vile-hlp.html  vile-man.html  vile-man.sed  vile-toc.html  visvile.doc  visvile.html  w32modes.doc
filters/: ada-filt.l  ada.key  ant.key  as-filt.l  as.key  as386.key  asm-filt.l  asm.key  atr2ansi.c  atr2html.c  atr2text.c  au3-filt.l  au3.key  awk-filt.l  awk.key  bas-filt.l  bash.key  basic.key  bat-filt.l  bat.key  bnf-filt.l  bnf.key  c-filt.c  c-filt.flx  c.key  cfg-filt.l  conffilt.l  cpp.key  cs.key  csh.key  css-filt.l  css.key  cweb.key  cwebfilt.l  dcl-filt.l  dcl.key  def-filt.l  def.key  delphi.key  diff.key  (+183 more)
icons/: pumpkin.xbm  pumpkin.xcf  pumpkin.xpm  pumpkin_48x48.xcf  sink.xbm  sink.xcf  sink.xpm  sink_48x48.xcf  vile-mini_16x16.xpm  vile-mini_32x32.xpm  vile-mini_48x48.xpm  vile.xbm  vile.xcf  vile.xpm  vile_48x48.xcf
macros/: UXVile.ad  XVile.ad  color-ls.rc  complete.rc  dates.rc  digraphs.rc  gnugpg.rc  loaderrs.rc  lxvile  lxvile-fonts  lxvile.desktop  manpage.rc  modes.rc  palettes.rc  pictmode.rc  search.rc  shifts.rc  showeach.rc  uxvile  uxvile.desktop  vile-libdir-path  vile-pager  vile-to-html  vileinit.rc  vilemenu.rc  vileperl.rc  which.rc  xvile.desktop
package/: convile.nsi  minvile.nsi  vile.spec  winvile-wide.iss  winvile.iss  winvile.nsi  winvile64-wide.iss  winvile64.iss
package/debian/: changelog  control  copyright  rules  vile-common.README.Debian  vile-common.docs  vile-common.examples  vile-common.files  vile-common.manpages  vile-filters.files  vile-filters.links  vile.files  vile.links  vile.menu  vile.mini.xpm  vile.postinst  vile.prerm  xvile.files  xvile.links  xvile.menu
package/debian/overrides/: vile
package/freebsd/vile/: Makefile  distinfo
package/freebsd/xvile/: Makefile  distinfo  pkg-plist
package/openbsd/: Makefile
package/pkgsrc/vile/: Makefile  PLIST  distinfo
package/pkgsrc/xvile/: Makefile  PLIST
perl/: Breadcrumbs.pm  CaptHook.pm  Glob2re.pm  Help.pm  Vile.pm  Vileserv.pm  Visit.pm  capture.pl  capture.pm  dict.pm  dir.pl  directory.pm  dirlist.pm  gdb.pm  glob2re.pl  hgrep.pm  hilite.pl  lock.pl  lock.pm  man.pm  manfilt.pl  mime.pl  plugins.pl  search.pl  search.pm  shell.pl  shell.pm  spell.pl  spell.pm  syntax.pl  tailf.pl  vileget  visit.pl  winops.pl  winops.pm
perl/Vile/: Exporter.pm  Manual.pm
plugins/: Makefile  test.c  test.rc
visvile/: commands.cpp  commands.h  dsaddin.cpp  dsaddin.h  oleauto.cpp  oleauto.h  readme.txt  resource.h  stdafx.cpp  stdafx.h  visvile.cpp  visvile.def  visvile.dsm  visvile.dsp  visvile.dsw  visvile.h  visvile.odl  visvile.rc  visvile.rc2
